# etherfetch

./: .env.sample  .gitignore  Readme.md  fetcher.py  main.py  pyproject.toml
contracts/1/: 1.sol
contracts/2/contracts/: IR.sol
downloads/0x804f398B7a528370c7c29058D8799D9fB2919a94/contracts/: SMETXCrowdSale.sol  SMETXVesting.sol
downloads/0x8eFd1Dc43AD073232F3e2924e22F173879119489/: remappings
downloads/0xFc1840b250F81C88491F4C420f2b98c7430Ebd4e/: contract.sol
samples/: 1.json  2.json  3.json
